--- a/templates/club/bureau.html.twig
+++ b/templates/club/bureau.html.twig
@@ -5,50 +5,87 @@
 {% block body %}
     <div>
         <div class="container">
-            <ul class="list-group list-group-flush text-center">
-                {% for bureau in bureaux %}
-                    <li class="list-group-item">
-                        {% if bureau.image %}
-                            <img class="rounded-circle"
-                                 src="{{ asset('uploads/bureau/') }}{{ bureau.image }}"
-                                 width="64"
-                                 height="64"
-                                 alt="">
-                        {% endif %}
-                        <span class="font-weight-bold">{{ bureau.role }}:</span> {{ bureau.text }}
-                    </li>
-                {% else %}
-                    <li class="list-group-item">
-                        no records found
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div class="container">
             <div class="row text-center justify-content-center">
-                {% for bureau in bureaux %}
-                    <div class="col-lg-3">
-                        {% if bureau.image %}
-                            <img class="rounded-circle"
-                                 src="{{ asset('uploads/bureau/') }}{{ bureau.image }}"
-                                 width="140"
-                                 height="140"
-                                 alt="">
-                        {% else %}
-                            <img class="rounded-circle"
-                                 src="http://placehold.it/140x140"
-                                 width="140"
-                                 height="140"
-                                 alt="">
-                        {% endif %}
-                        <h2>{{ bureau.role }}</h2>
-                        <p>{{ bureau.text }}</p>
-                    </div>
-                {% else %}
-                    <div class="col-lg-3">
-                        no records found
-                    </div>
-                {% endfor %}
+                <div class="col-lg-3">
+                    {% if president.image %}
+                        <img class="rounded-circle"
+                             src="{{ asset('uploads/bureau/') }}{{ president.image }}"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% else %}
+                        <img class="rounded-circle"
+                             src="http://placehold.it/140x140"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% endif %}
+                    <h2>{{ president.role }}</h2>
+                    <p>
+                        {{ president.prenom }}
+                        {{ president.nom }}
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    {% if tresorier.image %}
+                        <img class="rounded-circle"
+                             src="{{ asset('uploads/bureau/') }}{{ tresorier.image }}"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% else %}
+                        <img class="rounded-circle"
+                             src="http://placehold.it/140x140"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% endif %}
+                    <h2>{{ tresorier.role }}</h2>
+                    <p>
+                        {{ tresorier.prenom }}
+                        {{ tresorier.nom }}
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    {% if secretaire.image %}
+                        <img class="rounded-circle"
+                             src="{{ asset('uploads/bureau/') }}{{ secretaire.image }}"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% else %}
+                        <img class="rounded-circle"
+                             src="http://placehold.it/140x140"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% endif %}
+                    <h2>{{ secretaire.role }}</h2>
+                    <p>
+                        {{ secretaire.prenom }}
+                        {{ secretaire.nom }}
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    {% if secretaireAdj.image %}
+                        <img class="rounded-circle"
+                             src="{{ asset('uploads/bureau/') }}{{ secretaireAdj.image }}"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% else %}
+                        <img class="rounded-circle"
+                             src="http://placehold.it/140x140"
+                             width="140"
+                             height="140"
+                             alt="">
+                    {% endif %}
+                    <h2>{{ secretaireAdj.role }}</h2>
+                    <p>
+                        {{ secretaireAdj.prenom }}
+                        {{ secretaireAdj.nom }}
+                    </p>
+                </div>
             </div>
         </div>
     </div>
