--- a/templates/club/enseignants.html.twig
+++ b/templates/club/enseignants.html.twig
@@ -25,7 +25,8 @@
                         <p>
                             {{ professeur.prenom }}
                             {{ professeur.nom }}
-                            {{ professeur.text }}
+                            {{ professeur.grade }}
+                            {{ professeur.diplome }}
                         </p>
                     </div>
                 {% else %}
