--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -130,7 +130,7 @@
             </div>
             <div class="tab-pane fade" id="adhésion" role="tabpanel" aria-labelledby="adhésion-tab">
                 <h3>Inscription</h3>
-                <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
+                <a href="{{ path('downloadInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
         </div>
     </div>
