--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -21,19 +21,19 @@
         <div class="tab-content" id="adhesionTabContent">
             <div id="judo" class="tab-pane fade show active" role="tabpanel" aria-labelledby="judo-tab">
                 <h3>Inscription Judo</h3>
-                <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
+                <a href="{{ path('downloadInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
             <div id="jujitsu" class="tab-pane fade" role="tabpanel" aria-labelledby="jujitsu-tab">
                 <h3>Inscription Ju Jitsu</h3>
-                <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
+                <a href="{{ path('downloadInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
             <div id="taiso" class="tab-pane fade" role="tabpanel" aria-labelledby="taiso-tab">
                 <h3>Inscription Taiso</h3>
-                <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
+                <a href="{{ path('downloadInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
             <div id="newaza" class="tab-pane fade" role="tabpanel" aria-labelledby="newaza-tab">
                 <h3>Inscription Ne Waza</h3>
-                <a href="{{ path('downloadJudoInscription') }}" target="_blank">Fiche d'inscription</a>
+                <a href="{{ path('downloadInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
         </div>
     </div>
