--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,45 @@
             .footer {
                 background: lightgray;
             }
+            .border {
+                border-width:5px !important;
+            }
+            .vertical-stripes-white-yellow {
+                background: repeating-linear-gradient(
+                    to right,
+                    white,
+                    white 10px,
+                    #ffde3d 10px,
+                    #ffde3d 20px
+                );
+            }
+            .vertical-stripes-yellow-orange {
+                background: repeating-linear-gradient(
+                        to right,
+                        #ffde3d,
+                        #ffde3d 10px,
+                        orange 10px,
+                        orange 20px
+                );
+            }
+            .vertical-stripes-orange-green {
+                background: repeating-linear-gradient(
+                        to right,
+                        orange,
+                        orange 10px,
+                        #489343 10px,
+                        #489343 20px
+                );
+            }
+            .vertical-stripes-green-blue {
+                background: repeating-linear-gradient(
+                        to right,
+                        #489343,
+                        #489343 10px,
+                        #0B70C0 10px,
+                        #0B70C0 20px
+                );
+            }
         </style>
         {% block stylesheets %}{% endblock %}
     </head>
@@ -30,12 +69,12 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-center text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item border border-white">
                             <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
                                 Accueil
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown border border-white">
                             <a class="nav-link dropdown-toggle" style="color: black; background: #ffde3d" id="navbarClubMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Club
@@ -48,7 +87,7 @@
                                 <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown border border-white">
                             <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Disciplines
@@ -60,7 +99,7 @@
                                 <a class="dropdown-item" href="{{ path('ne-waza') }}">Ne Waza</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown border border-white">
                             <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Inscription
@@ -70,7 +109,7 @@
                                 <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown border border-white">
                             <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Actualités
@@ -81,7 +120,7 @@
                                 <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
                             </div>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item border border-white">
                             <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
                                 Documents
                             </a>
@@ -118,69 +157,83 @@
             {% block body %}{% endblock %}
         </div>
         <footer class="footer mt-auto py-3 flex-shrink-0">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFooter"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center text-center" id="navbarFooter">
+                    <ul class="navbar-nav">
+                        <li class="nav-item border border-white vertical-stripes-white-yellow">
+                            <a class="nav-link" style="color: black" href="{{ path('judo') }}">
+                                Judo
+                            </a>
+                        </li>
+                        <li class="nav-item border border-white vertical-stripes-yellow-orange">
+                            <a class="nav-link" style="color: black" href="{{ path('ju-jitsu') }}">
+                                Ju Jitsu
+                            </a>
+                        </li>
+                        <li class="nav-item border border-white vertical-stripes-orange-green">
+                            <a class="nav-link" style="color: black" href="{{ path('taiso') }}">
+                                Taiso
+                            </a>
+                        </li>
+                        <li class="nav-item border border-white vertical-stripes-green-blue">
+                            <a class="nav-link" style="color: black" href="{{ path('ne-waza') }}">
+                                Ne Waza
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-4 mx-auto">
-                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua.
-                        </p>
+                <a href="{{ path('contact') }}">
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-center">Contact</h5>
+                </a>
+            </div>
+            <div class="container">
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-center">Sponsors</h5>
+                <div class="row justify-content-center text-center">
+                    <div class="col">
+                        <a href="https://www.lille.fr/">
+                            <img src="{{ asset('assets/Logo_ville_de_Lille.png') }}"
+                                 height="180"
+                                 width="160"
+                                 alt="lille_logo">
+                        </a>
                     </div>
-                    <hr class="clearfix w-100 d-md-none">
-                    <div class="col-md-2 mx-auto">
-                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Disciplines</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="{{ path('judo') }}">Judo</a>
-                            </li>
-                            <li>
-                                <a href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
-                            </li>
-                            <li>
-                                <a href="{{ path('taiso') }}">Taiso</a>
-                            </li>
-                            <li>
-                                <a href="{{ path('ne-waza') }}">Ne Waza</a>
-                            </li>
-                        </ul>
+                    <div class="col">
+                        <a href="https://www.luc.asso.fr/">
+                            <img src="{{ asset('assets/logo_LUClub.png') }}"
+                                 height="180"
+                                 width="147"
+                                 alt="logo_LUClub">
+                        </a>
                     </div>
-                    <hr class="clearfix w-100 d-md-none">
-                    <div class="col-md-2 mx-auto">
-                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Contact</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#">Contact 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Contact 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Contact 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Contact 4</a>
-                            </li>
-                        </ul>
-
+                    <div class="col">
+                        <a href="https://www.ffjudo.com/">
+                            <img src="{{ asset('assets/logo_FFJDA.png') }}"
+                                 height="180"
+                                 width="120"
+                                 alt="logo_FFJDA">
+                        </a>
                     </div>
-                    <hr class="clearfix w-100 d-md-none">
-                    <div class="col-md-2 mx-auto">
-                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Sponsors</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#">Sponsor 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Sponsor 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Sponsor 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Sponsor 4</a>
-                            </li>
-                        </ul>
+                    <div class="col">
+                        <a href="https://www.agilim.fr/">
+                            <img src="{{ asset('assets/logo_agilim.png') }}"
+                                 height="100"
+                                 width="300"
+                                 alt="logo_FFJDA">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="https://www.lillemetropole.fr/">
+                            <img src="{{ asset('assets/logo_MEL.png') }}"
+                                 height="180"
+                                 width="146"
+                                 alt="logo_FFJDA">
+                        </a>
                     </div>
                 </div>
             </div>
