--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
             body {
                 height: 100%;
             }
+            a {
+                color: #A93514;
+            }
             .dropdown:hover .dropdown-menu{
                 display: block;
             }
@@ -129,9 +132,11 @@
                 </div>
             </nav>
             <div style="background: #A93514">
-                <div class="container">
-                    <a class="float-left" href="{{ path('boutique') }}" style="color: black"><strong>Boutique</strong></a>
-                    <div class="text-right">
+                <div class="row text-center justify-content-center">
+                    <div class="col my-auto">
+                        <a href="{{ path('boutique') }}" style="color: black"><strong>Boutique</strong></a>
+                    </div>
+                    <div class="col my-auto">
                         <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank">
                             <img src="{{ asset('assets/fb_logo.png') }}"
                                  height="100"
@@ -196,7 +201,7 @@
                 <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-center">Sponsors</h5>
                 <div class="row justify-content-center text-center">
                     <div class="col">
-                        <a href="https://www.lille.fr/">
+                        <a href="https://www.lille.fr/" target="_blank">
                             <img src="{{ asset('assets/Logo_ville_de_Lille.png') }}"
                                  height="180"
                                  width="160"
@@ -204,7 +209,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="https://www.luc.asso.fr/">
+                        <a href="https://www.luc.asso.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_LUClub.png') }}"
                                  height="180"
                                  width="147"
@@ -212,7 +217,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="https://www.ffjudo.com/">
+                        <a href="https://www.ffjudo.com/" target="_blank">
                             <img src="{{ asset('assets/logo_FFJDA.png') }}"
                                  height="180"
                                  width="120"
@@ -220,7 +225,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="https://www.agilim.fr/">
+                        <a href="https://www.agilim.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_agilim.png') }}"
                                  height="100"
                                  width="300"
@@ -228,7 +233,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="https://www.lillemetropole.fr/">
+                        <a href="https://www.lillemetropole.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_MEL.png') }}"
                                  height="180"
                                  width="146"
