--- a/templates/club/contact.html.twig
+++ b/templates/club/contact.html.twig
@@ -10,8 +10,12 @@
         <input type="submit" value="Send"/>
         {{ form_end(form) }}
     </div>
-{#    <div class="container text-center">#}
-{#        <h2>Réseaux</h2>#}
-{#        <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/"><img src="{{ asset('assets/fb_logo.png') }}" alt="FB Logo"></a>#}
-{#    </div>#}
+    <div class="container text-center">
+        <h2>Réseaux</h2>
+        <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank">
+            <img src="{{ asset('assets/fb_logo.png') }}"
+                 class="img-fluid"
+                 alt="FB Logo">
+        </a>
+    </div>
 {% endblock %}
