[~] container on a row

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -132,20 +132,22 @@
                 </div>
             </nav>
             <div style="background: #A93514">
-                <div class="row text-center justify-content-center">
-                    <div class="col my-auto">
-                        <a href="{{ path('boutique') }}" style="color: black"><strong>Boutique</strong></a>
-                    </div>
-                    <div class="col my-auto">
-                        <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank">
-                            <img src="{{ asset('assets/fb_logo.png') }}"
-                                 height="100"
-                                 width="100"
-                                 alt="fb_logo">
-                        </a>
+                <div class="container">
+                    <div class="row text-center justify-content-center">
+                        <div class="col my-auto">
+                            <a href="{{ path('boutique') }}" style="color: black"><strong>Boutique</strong></a>
+                        </div>
+                        <div class="col my-auto">
+                            <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank">
+                                <img src="{{ asset('assets/fb_logo.png') }}"
+                                     height="100"
+                                     width="100"
+                                     alt="fb_logo">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <h1 class="display-3 float-none text-center" style="color: black"><strong>LUC JUDO</strong><br/>
+                <h1 class="display-3 text-center" style="color: black"><strong>LUC JUDO</strong><br/>
                     <small class="text-white">Judo - Ju Jitsu - Ne Waza - Taiso</small>
                 </h1>
             </div>
