[~] my-auto class on row

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -202,7 +202,7 @@
             <div class="container">
                 <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-center">Sponsors</h5>
                 <div class="row justify-content-center text-center">
-                    <div class="col">
+                    <div class="col my-auto">
                         <a href="https://www.lille.fr/" target="_blank">
                             <img src="{{ asset('assets/Logo_ville_de_Lille.png') }}"
                                  height="180"
@@ -210,7 +210,7 @@
                                  alt="lille_logo">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col my-auto">
                         <a href="https://www.luc.asso.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_LUClub.png') }}"
                                  height="180"
@@ -218,7 +218,7 @@
                                  alt="logo_LUClub">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col my-auto">
                         <a href="https://www.ffjudo.com/" target="_blank">
                             <img src="{{ asset('assets/logo_FFJDA.png') }}"
                                  height="180"
@@ -226,7 +226,7 @@
                                  alt="logo_FFJDA">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col my-auto">
                         <a href="https://www.agilim.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_agilim.png') }}"
                                  height="100"
@@ -234,7 +234,7 @@
                                  alt="logo_FFJDA">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col my-auto">
                         <a href="https://www.lillemetropole.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_MEL.png') }}"
                                  height="180"
