--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -231,7 +231,7 @@
                             <img src="{{ asset('assets/logo_agilim.png') }}"
                                  height="100"
                                  width="300"
-                                 alt="logo_FFJDA">
+                                 alt="logo_agilim">
                         </a>
                     </div>
                     <div class="col my-auto">
@@ -239,7 +239,7 @@
                             <img src="{{ asset('assets/logo_MEL.png') }}"
                                  height="180"
                                  width="146"
-                                 alt="logo_FFJDA">
+                                 alt="logo_MEL">
                         </a>
                     </div>
                 </div>
